[ADD] button scroll to top

--- a/index.html
+++ b/index.html
@@ -942,12 +942,55 @@
         </div>
         <p class="m-0">
           Dibuat oleh
-          <a class="text-black font-bold" href="#">Fiki Aprian. </a>Copyright
+          <a class="text-black font-bold" href="#">Fiki Aprian. </a>
           <a class="text-black font-bold" href="#">&copy;2023</a>.
         </p>
       </div>
     </div>
     <!-- Footer End -->
+
+    <!-- Scroll to Bottom -->
+    <button
+      id="scroll-to-bottom"
+      class="fixed bottom-4 right-4 p-2 bg-green-500 text-white rounded-full hover:bg-green-600 focus:outline-none"
+    >
+      <svg
+        class="w-6 h-6"
+        fill="none"
+        stroke="currentColor"
+        viewBox="0 0 24 24"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          stroke-width="2"
+          d="M19 14l-7 7m0 0l-7-7m7 7V3"
+        ></path>
+      </svg>
+    </button>
+
+    <!-- Back to Top -->
+    <a
+      id="back-to-top"
+      href="#"
+      class="fixed bottom-4 right-16 p-2 bg-white text-green-500 rounded-full hover:bg-gray-200 focus:outline-none"
+    >
+      <svg
+        class="w-6 h-6"
+        fill="none"
+        stroke="currentColor"
+        viewBox="0 0 24 24"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          stroke-width="2"
+          d="M5 10l7-7m0 0l7 7m-7-7v18"
+        ></path>
+      </svg>
+    </a>
 
     <script src="dist/js/script.js"></script>
   </body>
