--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             </p>
 
             <a
-              href="#"
+              href="#contact"
               class="text-base font-semibold text-white tracking-wide bg-primary py-3 px-8 rounded-full hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out"
               >Hubungi Saya</a
             >
@@ -199,7 +199,7 @@
             </p>
             <div class="py-2">
               <h6 class="text-gray-600">Phone:</h6>
-              <span class="text-secondary">+6282215551548</span>
+              <span class="text-secondary">+6285280701948</span>
             </div>
             <div class="py-2 mb-3">
               <h6 class="text-gray-600">Email:</h6>
@@ -208,7 +208,7 @@
             <div class="flex items-center">
               <!-- Linkedin -->
               <a
-                href="#"
+                href="https://www.linkedin.com/in/fiki-aprian-b8624b216/"
                 class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 hover:border-primary hover:bg-primary hover:text-white"
               >
                 <svg
@@ -226,7 +226,7 @@
               </a>
               <!-- Instagram -->
               <a
-                href="#"
+                href="https://www.instagram.com/fiki_aprian_17/"
                 class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 hover:border-primary hover:bg-primary hover:text-white"
               >
                 <svg
@@ -244,7 +244,7 @@
               </a>
               <!-- Facebook -->
               <a
-                href="#"
+                href="https://www.facebook.com/fiki.aprian.12"
                 class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 hover:border-primary hover:bg-primary hover:text-white"
               >
                 <svg
@@ -262,7 +262,7 @@
               </a>
               <!-- YouTube -->
               <a
-                href="#"
+                href="https://www.youtube.com/channel/UCn0WKXpUfkSuhI74eskBxrw"
                 class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 hover:border-primary hover:bg-primary hover:text-white"
               >
                 <svg
@@ -275,24 +275,6 @@
                   <title>YouTube</title>
                   <path
                     d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"
-                  />
-                </svg>
-              </a>
-              <!-- Twitter -->
-              <a
-                href="#"
-                class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 hover:border-primary hover:bg-primary hover:text-white"
-              >
-                <svg
-                  role="img"
-                  viewBox="0 0 24 24"
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="20"
-                  class="fill-current"
-                >
-                  <title>Twitter</title>
-                  <path
-                    d="M21.543 7.104c.015.211.015.423.015.636 0 6.507-4.954 14.01-14.01 14.01v-.003A13.94 13.94 0 0 1 0 19.539a9.88 9.88 0 0 0 7.287-2.041 4.93 4.93 0 0 1-4.6-3.42 4.916 4.916 0 0 0 2.223-.084A4.926 4.926 0 0 1 .96 9.167v-.062a4.887 4.887 0 0 0 2.235.616A4.928 4.928 0 0 1 1.67 3.148 13.98 13.98 0 0 0 11.82 8.292a4.929 4.929 0 0 1 8.39-4.49 9.868 9.868 0 0 0 3.128-1.196 4.941 4.941 0 0 1-2.165 2.724A9.828 9.828 0 0 0 24 4.555a10.019 10.019 0 0 1-2.457 2.549z"
                   />
                 </svg>
               </a>
@@ -530,7 +512,7 @@
           <p
             class="text-xl py-4 mt-4 bg-primary text-white rounded-3xl text-center"
           >
-            Pengalaman pengembangan projek pribadi yang saya buat
+            Pengalaman pengembangan projek yang saya buat
           </p>
         </div>
         <div class="w-full sm:w-full md:w-12/12 mt-5 px-4">
@@ -560,9 +542,20 @@
                 </li>
                 <li>
                   Firebase: Menggunakan firestore dan storage untuk penyimpanan
-                  datnya.
+                  datanya.
                 </li>
               </ul>
+              <!-- Tambahkan link GitHub di bawah -->
+              <div class="mt-4">
+                <a
+                  href="https://github.com/fikiap23/Whatsapp-clone.git"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="text-primary underline"
+                >
+                  Lihat Sourcode
+                </a>
+              </div>
             </div>
           </div>
 
@@ -591,6 +584,16 @@
                 Mengintegrasikan backend dengan API yang dapat diakses oleh
                 frontend menggunakan Laravel, Blade, dan MySQL.
               </p>
+              <div class="mt-4">
+                <a
+                  href="https://github.com/fikiap23/Ayo_Kerja.git"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="text-primary underline"
+                >
+                  Lihat Sourcode
+                </a>
+              </div>
             </div>
           </div>
 
@@ -616,11 +619,21 @@
                 Saat ini sedang mengembangkan situs web media sosial menggunakan
                 MERN Stack. Frontend menggunakan ReactJS, ChakraUI, Tailwind
                 CSS, dan Recoil untuk manajemen state. Backend dibangun dengan
-                ExpressJS, REST API, JWT, MongoDB, dan Socket.io untuk obrolan
+                ExpressJS, REST API, JWT, MongoDB, dan Socket.io untuk chat
                 real-time. Fitur yang dikembangkan termasuk registrasi pengguna,
-                login, posting, menyukai, memposting kembali, memberi komentar,
-                mengikuti, dan fungsionalitas obrolan.
+                login, posting, like, repost, memberi komentar, mengikuti, dan
+                fungsionalitas chat.
               </p>
+              <div class="mt-4">
+                <a
+                  href="https://github.com/fikiap23/Posivibes-v2.git"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="text-primary underline"
+                >
+                  Lihat Sourcode
+                </a>
+              </div>
             </div>
           </div>
 
@@ -650,6 +663,16 @@
                 Recoil untuk manajemen state. Backend menggabungkan ExpressJS,
                 REST API, JWT, dan MongoDB.
               </p>
+              <div class="mt-4">
+                <a
+                  href="https://github.com/fikiap23/Task-Management.git"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="text-primary underline"
+                >
+                  Lihat Sourcode
+                </a>
+              </div>
             </div>
           </div>
 
@@ -678,8 +701,18 @@
                 frontend menggunakan ReactJS, Tailwind CSS, dan Recoil untuk
                 manajemen state. Fitur-fiturnya mencakup fungsionalitas
                 pencarian, kemampuan mengunggah dan mengunduh, dan interaksi
-                pengguna.
+                pengguna seperti like dan comment.
               </p>
+              <div class="mt-4">
+                <a
+                  href="https://github.com/fikiap23/barayaArt-v2.git"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="text-primary underline"
+                >
+                  Lihat Sourcode
+                </a>
+              </div>
             </div>
           </div>
 
@@ -705,9 +738,18 @@
                 Mengembangkan aplikasi mobile untuk TaskPlus menggunakan
                 teknologi Flutter untuk frontend mobile dan ExpressJS dengan
                 MongoDB untuk backend. Aplikasi ini akan mencakup fungsionalitas
-                manajemen tugas, otentikasi pengguna, dan interaksi yang
-                responsif.
+                manajemen tugas, otentikasi pengguna, dan catatan harian.
               </p>
+              <div class="mt-4">
+                <a
+                  href="https://github.com/fikiap23/taskplus.git"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="text-primary underline"
+                >
+                  Lihat Sourcode
+                </a>
+              </div>
             </div>
           </div>
         </div>
@@ -739,7 +781,7 @@
             href="https://github.com/fikiap23/Whatsapp-clone.git"
             target="_blank"
             rel="noreferrer"
-            class="rounded-lg overflow-hidden transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 hover:bg-primary duration-300"
+            class="border border-black rounded-lg overflow-hidden transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 hover:bg-primary duration-300"
           >
             <!-- Gambar Proyek -->
             <img
@@ -773,7 +815,7 @@
             href="https://ayakerja.000webhostapp.com/"
             target="_blank"
             rel="noreferrer"
-            class="bg-blue-400 rounded-lg overflow-hidden transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 hover:bg-primary duration-300"
+            class="bg-blue-400 border border-black rounded-lg overflow-hidden transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 hover:bg-primary duration-300"
           >
             <!-- Gambar Proyek -->
             <img
@@ -809,7 +851,7 @@
             href="https://posivibes.site/"
             target="_blank"
             rel="noreferrer"
-            class="bg-purple-400 rounded-lg overflow-hidden transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 hover:bg-primary duration-300"
+            class="bg-purple-400 border border-black rounded-lg overflow-hidden transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 hover:bg-primary duration-300"
           >
             <!-- Gambar Proyek -->
             <img
@@ -848,7 +890,7 @@
             href="https://task-management-fikiap23.vercel.app/"
             target="_blank"
             rel="noreferrer"
-            class="bg-yellow-400 rounded-lg overflow-hidden transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 hover:bg-primary duration-300"
+            class="bg-yellow-400 border border-black rounded-lg overflow-hidden transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 hover:bg-primary duration-300"
           >
             <!-- Gambar Proyek -->
             <img
@@ -887,7 +929,7 @@
             href="https://baraya-art-v3.vercel.app/"
             target="_blank"
             rel="noreferrer"
-            class="bg-red-400 rounded-lg overflow-hidden transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 hover:bg-primary duration-300"
+            class="bg-red-400 border border-black rounded-lg overflow-hidden transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 hover:bg-primary duration-300"
           >
             <!-- Gambar Proyek -->
             <img
@@ -919,7 +961,7 @@
             href="https://play.google.com/store/apps/details?id=com.ifuinsgd.taskplus"
             target="_blank"
             rel="noreferrer"
-            class="bg-orange-400 rounded-lg overflow-hidden transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 hover:bg-primary duration-300"
+            class="bg-orange-400 border border-black rounded-lg overflow-hidden transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 hover:bg-primary duration-300"
           >
             <!-- Gambar Proyek -->
             <img
@@ -1024,7 +1066,7 @@
         <div class="flex items-center justify-center mb-4">
           <!-- Linkedin -->
           <a
-            href="#"
+            href="https://www.linkedin.com/in/fiki-aprian-b8624b216/"
             class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 hover:border-primary hover:bg-primary hover:text-white"
           >
             <svg
@@ -1042,7 +1084,7 @@
           </a>
           <!-- Instagram -->
           <a
-            href="#"
+            href="https://www.instagram.com/fiki_aprian_17/"
             class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 hover:border-primary hover:bg-primary hover:text-white"
           >
             <svg
@@ -1060,7 +1102,7 @@
           </a>
           <!-- Facebook -->
           <a
-            href="#"
+            href="https://www.facebook.com/fiki.aprian.12"
             class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 hover:border-primary hover:bg-primary hover:text-white"
           >
             <svg
@@ -1078,7 +1120,7 @@
           </a>
           <!-- YouTube -->
           <a
-            href="#"
+            href="https://www.youtube.com/channel/UCn0WKXpUfkSuhI74eskBxrw"
             class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 hover:border-primary hover:bg-primary hover:text-white"
           >
             <svg
@@ -1091,24 +1133,6 @@
               <title>YouTube</title>
               <path
                 d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"
-              />
-            </svg>
-          </a>
-          <!-- Twitter -->
-          <a
-            href="#"
-            class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 hover:border-primary hover:bg-primary hover:text-white"
-          >
-            <svg
-              role="img"
-              viewBox="0 0 24 24"
-              xmlns="http://www.w3.org/2000/svg"
-              width="20"
-              class="fill-current"
-            >
-              <title>Twitter</title>
-              <path
-                d="M21.543 7.104c.015.211.015.423.015.636 0 6.507-4.954 14.01-14.01 14.01v-.003A13.94 13.94 0 0 1 0 19.539a9.88 9.88 0 0 0 7.287-2.041 4.93 4.93 0 0 1-4.6-3.42 4.916 4.916 0 0 0 2.223-.084A4.926 4.926 0 0 1 .96 9.167v-.062a4.887 4.887 0 0 0 2.235.616A4.928 4.928 0 0 1 1.67 3.148 13.98 13.98 0 0 0 11.82 8.292a4.929 4.929 0 0 1 8.39-4.49 9.868 9.868 0 0 0 3.128-1.196 4.941 4.941 0 0 1-2.165 2.724A9.828 9.828 0 0 0 24 4.555a10.019 10.019 0 0 1-2.457 2.549z"
               />
             </svg>
           </a>
