--- a/index.html
+++ b/index.html
@@ -516,6 +516,43 @@
           </p>
         </div>
         <div class="w-full sm:w-full md:w-12/12 mt-5 px-4">
+          <div
+            class="relative flex flex-col p-3.5 border-primary md:border-b-4 border-l-4 md:items-start"
+            data-aos="fade-up"
+            data-aos-duration="800"
+          >
+            <h1
+              class="absolute top-0 bg-priborder-primary w-max p-2.5 shadow-2xl text-xl left-0"
+            >
+              Januari 2023 - Februari 2023
+            </h1>
+            <h1 class="pt-14 font-bold text-xl">Book Catalog - Rest Api</h1>
+            <h2 class="text-xl font-bold text-primary py-1">
+              Backend Developer
+            </h2>
+            <div
+              class="mt-1 leading-8 ont-medium text-secondary text-base max-w-xl lg:text-lg"
+            >
+              <p>Proyek Book Catalog ini memanfaatkan teknologi berikut:</p>
+              <ul class="list-disc p-4">
+                <li>Spring boot</li>
+                <li>Spring MVC</li>
+                <li>JWT</li>
+                <li>PostgreSQL, dengan ORM hibernate</li>
+              </ul>
+              <!-- Tambahkan link GitHub di bawah -->
+              <div class="mt-4">
+                <a
+                  href="https://github.com/fikiap23/book-catalog-v3.git"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="text-primary underline"
+                >
+                  Lihat Sourcode
+                </a>
+              </div>
+            </div>
+          </div>
           <!-- Proyek 1: Mandiri Clone WhatsApp -->
           <div
             class="relative flex flex-col p-3.5 border-primary md:border-b-4 border-l-4 md:items-start"
